--- a/src/app/components/pages/products/create-product/create-product.component.scss
+++ b/src/app/components/pages/products/create-product/create-product.component.scss
@@ -135,4 +135,8 @@ input[type="radio"]:hover {
   border-color: #0056b3; /* Đổi màu viền khi hover */
 }
 
+.text-danger {
+  font-size: 12px;
+}
+
   
