--- a/src/app/components/pages/user/user.component.html
+++ b/src/app/components/pages/user/user.component.html
@@ -17,6 +17,7 @@
           pRipple
           label="Thêm mới"
           style="height: 40px; width: 130px; border-radius: 10px;"
+          (click)="openDialog()"
         ></button>
         </div>
     </div>
