--- a/src/app/components/pages/products/update-product/update-product.component.scss
+++ b/src/app/components/pages/products/update-product/update-product.component.scss
@@ -142,4 +142,9 @@ input[type="radio"]:hover {
   border-color: #0056b3; /* Đổi màu viền khi hover */
 }
 
+.text-danger {
+  font-size: 12px;
+}
+
+
   
