--- a/src/app/components/pages/branch/show/show.component.html
+++ b/src/app/components/pages/branch/show/show.component.html
@@ -23,6 +23,7 @@
                 #dt
                 [value]="branchs"
                 responsiveLayout="scroll"
+                styleClass="p-datatable-striped"
                 [rows]="10"
                 [paginator]="false"
                 [rowsPerPageOptions]="[10, 20, 30]"
