--- a/src/app/components/pages/warranty/warranty-request/show/show.component.html
+++ b/src/app/components/pages/warranty/warranty-request/show/show.component.html
@@ -26,6 +26,7 @@
                 [columns]="cols"
                 responsiveLayout="scroll"
                 [rows]="10"
+                styleClass="p-datatable-striped"
                 [globalFilterFields]="[
                     'name',
                     'country.name',
