--- a/src/app/components/auth/login/login.component.html
+++ b/src/app/components/auth/login/login.component.html
@@ -2,97 +2,139 @@
 <div
     class="surface-ground flex align-items-center justify-content-center min-h-screen min-w-screen overflow-hidden"
 >
-    <div class="flex flex-column align-items-center justify-content-center">
-        <div
-            style="
-                border-radius: 56px;
-                padding: 0.3rem;
-                background: linear-gradient(
-                    180deg,
-                    var(--primary-color) 10%,
-                    rgba(33, 150, 243, 0) 30%
-                );
-            "
-        >
+    <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
+        <div class="flex flex-column align-items-center justify-content-center">
             <div
-                class="w-full surface-card py-8 px-5 sm:px-8"
-                style="border-radius: 53px"
+                style="
+                    border-radius: 56px;
+                    padding: 0.3rem;
+                    background: linear-gradient(
+                        180deg,
+                        var(--primary-color) 10%,
+                        rgba(33, 150, 243, 0) 30%
+                    );
+                "
             >
-                <div class="text-center mb-5">
-                    <img
-                        src="assets/image/logo/logo.png"
-                        alt="Image"
-                        height="50"
-                        class="mb-3"
-                    />
-                    <div class="text-900 text-3xl font-medium mb-3">
-                        Welcome, Isabel!
-                    </div>
-                    <span class="text-600 font-medium"
-                        >Sign in to continue</span
-                    >
-                </div>
-
-                <div>
-                    <label
-                        for="email1"
-                        class="block text-900 text-xl font-medium mb-2"
-                        >Email</label
-                    >
-                    <input
-                        id="email1"
-                        type="text"
-                        placeholder="Email address"
-                        pInputText
-                        class="w-full md:w-30rem mb-5"
-                        style="padding: 1rem"
-                        [(ngModel)]="loginRequest.email"
-                    />
-
-                    <label
-                        for="password1"
-                        class="block text-900 font-medium text-xl mb-2"
-                        >Password</label
-                    >
-                    <p-password
-                        id="password1"
-                        [(ngModel)]="loginRequest.password"
-                        placeholder="Password"
-                        [toggleMask]="true"
-                        styleClass="mb-5"
-                        inputStyleClass="w-full p-3 md:w-30rem"
-                    ></p-password>
-
-                    <div
-                        class="flex align-items-center justify-content-between mb-5 gap-5"
-                    >
-                        <div class="flex align-items-center">
-                            <p-checkbox
-                                id="rememberme1"
-                                [binary]="true"
-                                styleClass="mr-2"
-                                [(ngModel)]="loginRequest.rememberMe"
-                            ></p-checkbox>
-                            <label for="rememberme1">Remember me</label>
+                <div
+                    class="w-full surface-card py-8 px-5 sm:px-8"
+                    style="border-radius: 53px"
+                >
+                    <div class="text-center mb-5">
+                        <img
+                            src="assets/image/logo/logo.png"
+                            alt="Image"
+                            height="50"
+                            class="mb-3"
+                        />
+                        <div class="text-900 text-3xl font-medium mb-3">
+                            Welcome, Isabel!
                         </div>
-                        <a
-                            class="font-medium no-underline ml-2 text-right cursor-pointer"
-                            style="color: var(--primary-color)"
-                            >Forgot password?</a
+                        <span class="text-600 font-medium"
+                            >Sign in to continue</span
                         >
                     </div>
-                    <button
-                        pButton
-                        pRipple
-                        label="Sign In"
-                        class="w-full p-3 text-xl"
-                        (click)="handleLogin()"
-                    ></button>
+
+                    <div>
+                        <div class="mb-3">
+                            <label
+                                for="email1"
+                                class="block text-900 text-xl font-medium mb-2"
+                                >Email</label
+                            >
+                            <input
+                                id="email1"
+                                type="text"
+                                placeholder="Nhập email"
+                                pInputText
+                                class="w-full md:w-30rem"
+                                style="padding: 1rem"
+                                formControlName="email"
+                            />
+
+                            <div
+                                *ngIf="
+                                    loginForm.get('email')?.invalid &&
+                                    (loginForm.get('email')?.dirty ||
+                                        loginForm.get('email')?.touched)
+                                "
+                            >
+                                <div
+                                    *ngIf="loginForm.get('email')?.errors?.['required']"
+                                    class="error-message"
+                                >
+                                    Vui lòng nhập email
+                                </div>
+                                <div
+                                    *ngIf="loginForm.get('email')?.errors?.['pattern']"
+                                    class="error-message"
+                                >
+                                    Email không hợp lệ.
+                                </div>
+                            </div>
+                            <!-- [(ngModel)]="loginRequest.email" -->
+                        </div>
+                        <div class="mb-3">
+                            <label
+                                for="password1"
+                                class="block text-900 font-medium text-xl mb-2"
+                                >Mật khẩu</label
+                            >
+                            <p-password
+                                id="password1"
+                                placeholder="Nhập mật khẩu"
+                                [toggleMask]="true"
+                                formControlName="password"
+                                inputStyleClass="w-full p-3 md:w-30rem"
+                            ></p-password>
+                            <div
+                                *ngIf="
+                                    loginForm.get('password')?.invalid &&
+                                    (loginForm.get('password')?.dirty ||
+                                        loginForm.get('password')?.touched)
+                                "
+                            >
+                                <div
+                                    *ngIf="loginForm.get('password')?.errors?.['required']"
+                                    class="error-message"
+                                >
+                                    Vui lòng nhập mật khẩu
+                                </div>
+                            </div>
+
+                            <!-- [(ngModel)]="loginRequest.password" -->
+                        </div>
+
+                        <div
+                            class="flex align-items-center justify-content-between mb-5 gap-5"
+                        >
+                            <div class="flex align-items-center">
+                                <p-checkbox
+                                    id="rememberme1"
+                                    [binary]="true"
+                                    styleClass="mr-2"
+                                    formControlName="rememberMe"
+                                ></p-checkbox>
+                                <!-- [(ngModel)]="loginRequest.rememberMe" -->
+                                <label for="rememberme1">Nhớ mật khẩu</label>
+                            </div>
+                            <a
+                                class="font-medium no-underline ml-2 text-right cursor-pointer"
+                                style="color: var(--primary-color)"
+                                >Quên mật khẩu?</a
+                            >
+                        </div>
+                        <button
+                            pButton
+                            pRipple
+                            label="Sign In"
+                            class="w-full p-3 text-xl"
+                            type="submit"
+                        ></button>
+                    </div>
                 </div>
             </div>
         </div>
-    </div>
+    </form>
 </div>
-
 
 <!-- [routerLink]="['/']" -->
