--- a/src/app/components/pages/warranty/warranty-policy/show/show.component.html
+++ b/src/app/components/pages/warranty/warranty-policy/show/show.component.html
@@ -31,6 +31,7 @@
                     <p-table
                         responsiveLayout="scroll"
                         [rows]="10"
+                        styleClass="p-datatable-striped"
                         [value]="warrantyPolicies"
                         [paginator]="false"
                         [rowsPerPageOptions]="[10, 20, 30]"
