--- a/src/app/components/pages/user/user.component.html
+++ b/src/app/components/pages/user/user.component.html
@@ -34,125 +34,102 @@
             <div class="col-lg-12">
               <div class="card-body">
                 <div class="row">
-                  <div class="col-lg-4 mt-3">
+                  <div class="col-lg-3 mt-3">
                     <span class="p-input-icon-left" style="width: 100%">
                       <i class="pi pi-search"></i>
                       <input
                         type="text"
                         class="form-control"
-                        
+                        (input)="onInput($event)"
                         placeholder="Tìm kiếm theo tên, mã nhân viên"
                         style="padding-left: 30px; height: 38px"
-                        
+                        [(ngModel)]="selectedName"
                         #searchInput
                       />
                     </span>
                   </div>
-                  <div class="col-lg-4 mt-3">
-                    <p-dropdown
-                    [style]="{ height: '38px', width: '100%' }"
-                    [options]="Roles"
-                    optionLabel="name"
-                    [showClear]="true"
-                    placeholder="Chọn nhóm quyền"
-                    optionValue="id"
-                    [(ngModel)]="selectedRoleGroupId">
-                  </p-dropdown>
+                  <div class="col-lg-3 mt-3">
+                    <span class="p-input-icon-left" style="width: 100%">
+                      <i class="pi pi-search"></i>
+                      <input
+                        type="text"
+                        class="form-control"
+                        (input)="onInput($event)"
+                        placeholder="Tìm kiếm theo SĐT"
+                        style="padding-left: 30px; height: 38px"
+                        [(ngModel)]="selectedPhoneNumber"
+                        #searchInput
+                      />
+                    </span>
                   </div>
-                  <div class="col-lg-4 mt-3">
+                  <div class="col-lg-3 mt-3">
+                    <span class="p-input-icon-left" style="width: 100%">
+                      <i class="pi pi-search"></i>
+                      <input
+                        type="text"
+                        class="form-control"
+                        (input)="onInput($event)"
+                        placeholder="Tìm kiếm theo địa chỉ"
+                        style="padding-left: 30px; height: 38px"
+                        [(ngModel)]="selectedAddress"
+                        #searchInput
+                      />
+                    </span>
+                  </div>
+                  <div class="col-lg-3 mt-3">
                     <button
                       pButton
                       pRipple
                       label="Lọc"
                       class="buttonfilter"
-                      
+                      (click)="clickButtonFilter()"
                     ></button>
                   </div>
                 </div>
                 <div style="margin-top: 15px" class="card">
                   <p-table
-                    [value]=""
-                    [paginator]="true"
-                    [rows]="pageSize"
-                    [totalRecords]="totalRecordsCount > 0 ? totalRecordsCount : 1"
+                    [value]="users"
+                    [rows]="this.PageSize"
+                    [totalRecords]="totalRecords"
                     [paginator]="false"
                     (onPage)="onPageChange($event)"
+                    [style]="{ width: '100%' }"
                     styleClass="p-datatable-striped"
                   >
                     <ng-template pTemplate="header">
                       <tr>
-                        <!-- <th style="width: 10%">
-                          <p-checkbox [binary]="true" inputId="binary"></p-checkbox>
-                        </th> -->
-                        <th style="width: 10%">Mã</th>
-                        <th style="width: 20%">Tên danh mục</th>
-                        <th style="width: 15%">Trực thuộc</th>
-                        <th style="width: 10%">Cấp</th>
-                        <th style="width: 10%">Người tạo</th>
-                        <th style="width: 10%">Trạng thái</th>
-                        <th>Ẩn/Hiện</th>
-                        <th style="width: 10%">Thao tác</th>
+                        <th style="width: 1%; font-size: 14px;">STT</th>
+                        <th style="width: 8%; font-size: 14px;">Tên tài khoản</th>
+                        <th style="width: 6%; font-size: 14px;">SĐT</th>
+                        <th style="width: 6%; font-size: 14px;">Địa chỉ</th>
+                        <th style="width: 8%; font-size: 14px; text-align: center;">Chi nhánh</th>
                       </tr>
                     </ng-template>
-                    <ng-template pTemplate="body" let-category>
-                      <tr>
-                        <!-- <td>
-                          <p-checkbox [binary]="true" inputId="binary"></p-checkbox>
-                        </td> -->
-                        <td>{{ category.id }}</td>
-                        <td>{{ category.name }}</td>
-                        <td>{{ category.parentName }}</td>
-                        <td>{{ category.level }}</td>
-                        <td>{{ category.crateName }}</td>
-                        <td [style.color]="category.status === 1 ? 'green' : 'red'">
-                          {{ category.status === 1 ? "Hoạt động" : "Ẩn" }}
-                        </td>
-                        <td>
-                          <p-inputSwitch
-                            name="switchControl"
-                            [ngModel]="category.status === 1 ? true : false"
-                            (ngModelChange)="
-                              updateStatus(category.id, $event ? 1 : 0)
-                            "
-                            [disabled]="true"
-                          ></p-inputSwitch>
-                        </td>
-                        <!-- <td class="text-center">
-                          <a (click)="editCategory(category.id)">
-                            <i
-                              class="pi pi-pencil"
-                              style="font-size: 1.2rem; text-align: center"
-                            ></i>
-                          </a>
-                        </td> -->
-                        <td>
-                          <div class="flex">
-                              <button
-                                  pButton
-                                  pRipple
-                                  icon="pi pi-pencil"
-                                  class="p-button-rounded p-button-success mr-2"
-                                  (click)="editCategory(category.id)"
-                              ></button>
-                              <button
-                                  pButton
-                                  pRipple
-                                  icon="pi pi-trash"
-                                  class="p-button-rounded p-button-warning"
-                                  (click)="deleteProduct(product)"
-                              ></button>
-                          </div>
-                      </td>
-                      </tr>
+                    <ng-template pTemplate="body" let-user let-i="rowIndex">
+                      <tr class="custom-table">
+                        <td style="font-size: 14px;" (click)="openDialog2(user.id)">
+                          {{((this.pageNumber - 1) * this.pageSize) + (i + 1)}}</td>
+                        <td style="font-size: 14px;" (click)="openDialog2(user.id)">{{ user.name }}</td>
+                        <td style="font-size: 14px; max-width: 110px; overflow: hidden;" (click)="openDialog2(user.id)">{{ user.phoneNumber }}</td>
+                        <td style="font-size: 14px;" (click)="openDialog2(user.id)">{{ user.address }}</td>
+                        <td style="font-size: 14px;" (click)="openDialog2(user.id)">{{ user.branchName }}</td>
+                    </tr>
                     </ng-template>
                   </p-table>
-                  <div>
+                  <div class="paging-bot dg-fix">
+                    <div class="paging-info">
+                      <div [innerHTML]="currentPageReport"></div>
+                    </div>
                     <p-paginator
-                      [rows]="pageSize"
-                      (onPageChange)="onPageChange($event)"
-                      [totalRecords]="totalRecordsCount > 0 ? totalRecordsCount : 1"
-                      [rowsPerPageOptions]="[10, 20, 30]"
-                    ></p-paginator>
+                            [rows]="this.PageSize"
+                            (onPageChange)="onPageChange($event)"
+                            [totalRecords]="totalRecords > 0 ? totalRecords : 1"
+                            [rowsPerPageOptions]="[10, 20, 30]"
+                            [first]="
+                              (this.PageIndex - 1) *
+                              this.PageSize
+                            "
+                          ></p-paginator>
                   </div>
                 </div>
               </div>
@@ -169,7 +146,34 @@
               <!-- General Form Elements -->
               <form [formGroup]="RoleGroupForm" (ngSubmit)="onSubmit()">
                 <div class="row mb-12">
-                  <div style="margin-bottom: 20px;" class="col-lg-12" formGroupName="userRegist">
+                  <div style="margin-bottom: 20px;" class="col-lg-6" formGroupName="userRegist">
+                      <label class="labelip">Nhóm quyền<span class="red-asterisk">*</span></label>
+                      <p-dropdown
+                      [style]="{ height: '35px', width: '100%' }"
+                      [options]="Roles"
+                      optionLabel="name"
+                      [showClear]="true"
+                      placeholder="Chọn nhóm quyền"
+                      optionValue="id"
+                      formControlName="roleGroupId"
+                      ></p-dropdown>
+                      <div
+                      *ngIf="
+                        (RoleGroupForm.get('userRegist.roleGroupId')?.invalid &&
+                          (RoleGroupForm.get('userRegist.roleGroupId')?.dirty ||
+                            RoleGroupForm.get('userRegist.roleGroupId')?.touched)) ||
+                        showNameError
+                      "
+                    >
+                      <div
+                        *ngIf="RoleGroupForm.get('userRegist.roleGroupId')?.errors?.['required']"
+                        class="error-message"
+                      >
+                        Nhóm quyền không được bỏ trống
+                      </div>
+                    </div>
+                  </div>
+                  <div style="margin-bottom: 20px;" class="col-lg-6" formGroupName="userRegist">
                       <label class="labelip">Nhóm quyền<span class="red-asterisk">*</span></label>
                       <p-dropdown
                       [style]="{ height: '35px', width: '100%' }"
